--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,16 +1,17 @@
+body{
+  background-color: #d7ccc8;
+}
 .title{
   text-align: center;
 }
 .newList{
-  list-style:none;
   text-align: center;
-}
-.newList li{
-  padding:10px;
+  display: flex;
 }
 .newList input{
   margin:10px;
   width: 100px;
+  outline: none;
 }
 .list{
   display: flex;
@@ -21,37 +22,110 @@
 }
 .quote{
   font-style: italic;
-  color: darkgrey;
+  color: #413F42;;
 }
 button {
-  background-color: #f1f1f1;
-  color: black;
-  font-size: 16px;
-  border: none;
+  margin: 10px;
+  align-self: center;
+  background-color: #fff;
+  background-image: none;
+  background-position: 0 90%;
+  background-repeat: repeat no-repeat;
+  background-size: 4px 3px;
+  border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
+  border-style: solid;
+  border-width: 2px;
+  box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
+  box-sizing: border-box;
+  color: #41403e;
   cursor: pointer;
-  border-radius: 5px;
-  margin-left: 10px;
+  font-family: Neucha, sans-serif;
+  font-size: 1rem;
+  line-height:8px;
+  outline: none;
+  padding: 10px;
+  text-decoration: none;
+  transition: all 235ms ease-in-out;
+  border-bottom-left-radius: 15px 255px;
+  border-bottom-right-radius: 225px 15px;
+  border-top-left-radius: 255px 15px;
+  border-top-right-radius: 15px 225px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
   display: none;
 }
 .edit button{
   display: block;
+  padding: 10px;
 }
 #newButton{
-  display: block;
-  align-items: center;
-  width: 20%;
+  align-self: center;
+  background-color: #fff;
+  background-image: none;
+  background-position: 0 90%;
+  background-repeat: repeat no-repeat;
+  background-size: 4px 3px;
+  border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
+  border-style: solid;
+  border-width: 2px;
+  box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
+  box-sizing: border-box;
+  color: #41403e;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Neucha, sans-serif;
+  font-size: 1rem;
+  line-height:8px;
+  outline: none;
+  padding: 10px;
+  text-decoration: none;
+  transition: all 235ms ease-in-out;
+  border-bottom-left-radius: 15px 255px;
+  border-bottom-right-radius: 225px 15px;
+  border-top-left-radius: 255px 15px;
+  border-top-right-radius: 15px 225px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+button:focus {
+  box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
+}
+textarea{
+  margin: 10px;
+  width: 250px;
+  height: 15px;
+  outline: none;
 }
 .newListdiv{
   align-items: center;
-  flex-direction: column;
+  justify-content: center;
+  display: flex;
+  padding: 10px;
+}
+.newList div{
+  align-items: center;
   display: flex;
 }
 button:hover {
-  background-color: black;
-  color: white;
+  box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
+  transform: translate3d(0, 2px, 0);
 }
 .currenQuote:hover button{
  display: block;
+}
+.edit{
+  display: flex;
+}
+.edit div {
+  align-items: center;
+  display: flex;
+}
+.edit input {
+  margin: 10px;
+  width: 100px;
+  outline: none;
 }
 @keyframes App-logo-spin {
   from {
